puzzle update
